add coverage tool, remove unused code in engine

--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,35 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35
+envlist = py35, report
 
 [testenv]
-commands =
-    py.test
 deps =
     pytest
+    coverage
     -rrequirements.txt
+commands =
+    coverage run -m pytest tests {posargs}
+    mv .coverage .coverage.{envname}
+whitelist_externals =
+    coverage
+    mv
+    echo
 
 [testenv:py35]
 basepython = python3.5
+
+[testenv:report]
+deps =
+  coverage
+commands =
+  coverage combine
+  coverage report
+  coverage html
+  echo "Open file://{toxinidir}/coverage/index.html"
+
+basepython =
+  python3.5
 
 [docs]
 changedir = docs
@@ -26,10 +44,11 @@ deps =
 changedir = {[docs]changedir}
 deps = {[docs]deps}
 commands =
-    sphinx-build -W -b html . {envtmpdir}/html
+  sphinx-build -W -b html . {envtmpdir}/html
+  echo "Open file://{envtmpdir}/html/index.html"
 
 [testenv:docs-links]
 changedir = {[docs]changedir}
 deps = {[docs]deps}
 commands =
-    sphinx-build -W -b linkcheck . {envtmpdir}/linkcheck
+  sphinx-build -W -b linkcheck . {envtmpdir}/linkcheck
