--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, report
+# envlist = py36, report
+envlist = {py36,py35}, report, docs
 
 [testenv]
 deps =
@@ -19,8 +20,8 @@ whitelist_externals =
     mv
     echo
 
-[testenv:py35]
-basepython = python3.5
+# [testenv:py36]
+# basepython = python3.6
 
 [testenv:report]
 deps =
@@ -31,8 +32,8 @@ commands =
   coverage html
   echo "Open file://{toxinidir}/coverage/index.html"
 
-basepython =
-  python3.5
+# basepython =
+#   python3.6
 
 [docs]
 changedir = docs
